versions/0.8.1/_sources/refs/_aws-cdk_aws-route53.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"ib4ttPka5vmn9cMV3ll6BwW6+FS7xv0ALXdaEI+Me0U="}

@aws-cdk/aws-route53
====================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/route53/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:route53:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="route53" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>route53</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:route53:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='route53', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-route53/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-route53@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-route53": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-route53@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-route53/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-route53@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-route53": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-route53@0.8.1



.. mdinclude:: ./__aws-cdk_aws-route53.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-route53

HostedZoneId
^^^^^^^^^^^^

.. py:class:: HostedZoneId([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.HostedZoneId;

      .. code-tab:: javascript

         const { HostedZoneId } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { HostedZoneId } from '@aws-cdk/aws-route53';



   Hosted zone identifier


   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

HostedZoneNameServers
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: HostedZoneNameServers([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.HostedZoneNameServers;

      .. code-tab:: javascript

         const { HostedZoneNameServers } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { HostedZoneNameServers } from '@aws-cdk/aws-route53';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

HostedZoneRef
^^^^^^^^^^^^^

.. py:class:: HostedZoneRef(parent, name)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.HostedZoneRef;

      .. code-tab:: javascript

         const { HostedZoneRef } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { HostedZoneRef } from '@aws-cdk/aws-route53';



   Imported or created hosted zone


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :abstract: Yes
   :param parent: The parent construct
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string

   .. py:staticmethod:: import(parent, name, props) -> @aws-cdk/aws-route53.HostedZoneRef

      :param parent: 
      :type parent: :py:class:`@aws-cdk/cdk.Construct`
      :param name: 
      :type name: string
      :param props: 
      :type props: :py:class:`~@aws-cdk/aws-route53.HostedZoneRefProps`
      :rtype: :py:class:`~@aws-cdk/aws-route53.HostedZoneRef`


   .. py:method:: export() -> @aws-cdk/aws-route53.HostedZoneRefProps

      Export the hosted zone


      :rtype: :py:class:`~@aws-cdk/aws-route53.HostedZoneRefProps`


   .. py:attribute:: hostedZoneId

      ID of this hosted zone


      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneId` *(readonly)* *(abstract)*


   .. py:attribute:: zoneName

      FQDN of this hosted zone


      :type: string *(readonly)* *(abstract)*


HostedZoneRefProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: HostedZoneRefProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.HostedZoneRefProps;

      .. code-tab:: javascript

         // HostedZoneRefProps is an interface

      .. code-tab:: typescript

         import { HostedZoneRefProps } from '@aws-cdk/aws-route53';



   Reference to a hosted zone




   .. py:attribute:: hostedZoneId

      Identifier of the hosted zone


      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneId`


   .. py:attribute:: zoneName

      Name of the hosted zone


      :type: string


ImportedHostedZone
^^^^^^^^^^^^^^^^^^

.. py:class:: ImportedHostedZone(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.ImportedHostedZone;

      .. code-tab:: javascript

         const { ImportedHostedZone } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { ImportedHostedZone } from '@aws-cdk/aws-route53';



   Imported hosted zone


   :extends: :py:class:`~@aws-cdk/aws-route53.HostedZoneRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-route53.HostedZoneRefProps`

   .. py:attribute:: hostedZoneId

      ID of this hosted zone


      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneId` *(readonly)*


   .. py:attribute:: zoneName

      FQDN of this hosted zone


      :type: string *(readonly)*


PrivateHostedZone
^^^^^^^^^^^^^^^^^

.. py:class:: PrivateHostedZone(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.PrivateHostedZone;

      .. code-tab:: javascript

         const { PrivateHostedZone } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { PrivateHostedZone } from '@aws-cdk/aws-route53';



   Create a Route53 private hosted zone for use in one or more VPCs.  Note that `enableDnsHostnames` and `enableDnsSupport` must have been enabled for the VPC you're configuring for private hosted zones.


   :extends: :py:class:`~@aws-cdk/aws-route53.HostedZoneRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-route53.PrivateHostedZoneProps`

   .. py:method:: addVpc(vpc)

      Add another VPC to this private hosted zone.


      :param vpc: the other VPC to add.
      :type vpc: :py:class:`@aws-cdk/aws-ec2.VpcNetworkRef`


   .. py:attribute:: hostedZoneId

      Identifier of this hosted zone


      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneId` *(readonly)*


   .. py:attribute:: zoneName

      Fully qualified domain name for the hosted zone


      :type: string *(readonly)*


PrivateHostedZoneProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PrivateHostedZoneProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.PrivateHostedZoneProps;

      .. code-tab:: javascript

         // PrivateHostedZoneProps is an interface

      .. code-tab:: typescript

         import { PrivateHostedZoneProps } from '@aws-cdk/aws-route53';



   Properties for a private hosted zone.


   :extends: :py:class:`~@aws-cdk/aws-route53.PublicHostedZoneProps`


   .. py:attribute:: vpc

      One VPC that you want to associate with this hosted zone.


      :type: :py:class:`@aws-cdk/aws-ec2.VpcNetworkRef`


PublicHostedZone
^^^^^^^^^^^^^^^^

.. py:class:: PublicHostedZone(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.PublicHostedZone;

      .. code-tab:: javascript

         const { PublicHostedZone } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { PublicHostedZone } from '@aws-cdk/aws-route53';



   Create a Route53 public hosted zone.


   :extends: :py:class:`~@aws-cdk/aws-route53.HostedZoneRef`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-route53.PublicHostedZoneProps`

   .. py:attribute:: hostedZoneId

      Identifier of this hosted zone


      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneId` *(readonly)*


   .. py:attribute:: zoneName

      Fully qualified domain name for the hosted zone


      :type: string *(readonly)*


   .. py:attribute:: nameServers

      Nameservers for this public hosted zone


      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneNameServers` *(readonly)*


PublicHostedZoneProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: PublicHostedZoneProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.PublicHostedZoneProps;

      .. code-tab:: javascript

         // PublicHostedZoneProps is an interface

      .. code-tab:: typescript

         import { PublicHostedZoneProps } from '@aws-cdk/aws-route53';



   Properties of a new hosted zone




   .. py:attribute:: zoneName

      The fully qualified domain name for the hosted zone


      :type: string


   .. py:attribute:: comment

      Any comments that you want to include about the hosted zone.


      :type: string or undefined


   .. py:attribute:: queryLogsLogGroupArn

      The Amazon Resource Name (ARN) for the log group that you want Amazon Route 53 to send query logs to.


      :type: :py:class:`@aws-cdk/aws-logs.LogGroupArn` or undefined


TXTRecord
^^^^^^^^^

.. py:class:: TXTRecord(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.TXTRecord;

      .. code-tab:: javascript

         const { TXTRecord } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { TXTRecord } from '@aws-cdk/aws-route53';



   A DNS TXT record


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :param parent: 
   :type parent: :py:class:`~@aws-cdk/aws-route53.HostedZoneRef`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-route53.TXTRecordProps`

TXTRecordProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TXTRecordProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.TXTRecordProps;

      .. code-tab:: javascript

         // TXTRecordProps is an interface

      .. code-tab:: typescript

         import { TXTRecordProps } from '@aws-cdk/aws-route53';





   .. py:attribute:: recordName

      :type: string


   .. py:attribute:: recordValue

      :type: string


   .. py:attribute:: ttl

      :type: number or undefined


ZoneDelegationRecord
^^^^^^^^^^^^^^^^^^^^

.. py:class:: ZoneDelegationRecord(parent, name, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.ZoneDelegationRecord;

      .. code-tab:: javascript

         const { ZoneDelegationRecord } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { ZoneDelegationRecord } from '@aws-cdk/aws-route53';



   A record to delegate further lookups to a different set of name servers


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :param parent: 
   :type parent: :py:class:`~@aws-cdk/aws-route53.HostedZoneRef`
   :param name: 
   :type name: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-route53.ZoneDelegationRecordProps`

ZoneDelegationRecordProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ZoneDelegationRecordProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.ZoneDelegationRecordProps;

      .. code-tab:: javascript

         // ZoneDelegationRecordProps is an interface

      .. code-tab:: typescript

         import { ZoneDelegationRecordProps } from '@aws-cdk/aws-route53';





   .. py:attribute:: delegatedZoneName

      The name of the zone that delegation is made to.


      :type: string


   .. py:attribute:: nameServers

      The name servers to report in the delegation records.


      :type: string


   .. py:attribute:: ttl

      The TTL of the zone delegation records.


      :type: number or undefined


   .. py:attribute:: comment

      Any comments that you want to include about the zone delegation records.


      :type: string or undefined



cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-route53.cloudformation

HealthCheckResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: HealthCheckResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.HealthCheckResource;

      .. code-tab:: javascript

         const { cloudformation.HealthCheckResource } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { cloudformation.HealthCheckResource } from '@aws-cdk/aws-route53';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``HealthCheckResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``HealthCheckResource``
   :type properties: :py:class:`~@aws-cdk/aws-route53.cloudformation.HealthCheckResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AlarmIdentifierProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HealthCheckResource.AlarmIdentifierProperty;

         .. code-tab:: javascript

            // cloudformation.HealthCheckResource.AlarmIdentifierProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HealthCheckResource.AlarmIdentifierProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: name

         ``HealthCheckResource.AlarmIdentifierProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-alarmidentifier.html#cfn-route53-healthcheck-alarmidentifier-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: region

         ``HealthCheckResource.AlarmIdentifierProperty.Region``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-alarmidentifier.html#cfn-route53-healthcheck-alarmidentifier-region


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: HealthCheckConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HealthCheckResource.HealthCheckConfigProperty;

         .. code-tab:: javascript

            // cloudformation.HealthCheckResource.HealthCheckConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HealthCheckResource.HealthCheckConfigProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: alarmIdentifier

         ``HealthCheckResource.HealthCheckConfigProperty.AlarmIdentifier``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-alarmidentifier


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HealthCheckResource.AlarmIdentifierProperty` or undefined


      .. py:attribute:: childHealthChecks

         ``HealthCheckResource.HealthCheckConfigProperty.ChildHealthChecks``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-childhealthchecks


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: enableSni

         ``HealthCheckResource.HealthCheckConfigProperty.EnableSNI``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-enablesni


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: failureThreshold

         ``HealthCheckResource.HealthCheckConfigProperty.FailureThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-failurethreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: fullyQualifiedDomainName

         ``HealthCheckResource.HealthCheckConfigProperty.FullyQualifiedDomainName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-fullyqualifieddomainname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: healthThreshold

         ``HealthCheckResource.HealthCheckConfigProperty.HealthThreshold``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-healththreshold


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ipAddress

         ``HealthCheckResource.HealthCheckConfigProperty.IPAddress``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-ipaddress


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: insufficientDataHealthStatus

         ``HealthCheckResource.HealthCheckConfigProperty.InsufficientDataHealthStatus``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-insufficientdatahealthstatus


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: inverted

         ``HealthCheckResource.HealthCheckConfigProperty.Inverted``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-inverted


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: measureLatency

         ``HealthCheckResource.HealthCheckConfigProperty.MeasureLatency``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-measurelatency


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: port

         ``HealthCheckResource.HealthCheckConfigProperty.Port``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-port


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: regions

         ``HealthCheckResource.HealthCheckConfigProperty.Regions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-regions


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: requestInterval

         ``HealthCheckResource.HealthCheckConfigProperty.RequestInterval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-requestinterval


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: resourcePath

         ``HealthCheckResource.HealthCheckConfigProperty.ResourcePath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-resourcepath


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: searchString

         ``HealthCheckResource.HealthCheckConfigProperty.SearchString``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-searchstring


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``HealthCheckResource.HealthCheckConfigProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthcheckconfig.html#cfn-route53-healthcheck-healthcheckconfig-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: HealthCheckTagProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HealthCheckResource.HealthCheckTagProperty;

         .. code-tab:: javascript

            // cloudformation.HealthCheckResource.HealthCheckTagProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HealthCheckResource.HealthCheckTagProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: key

         ``HealthCheckResource.HealthCheckTagProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthchecktag.html#cfn-route53-healthchecktags-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``HealthCheckResource.HealthCheckTagProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-healthcheck-healthchecktag.html#cfn-route53-healthchecktags-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`



HealthCheckResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: HealthCheckResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.HealthCheckResourceProps;

      .. code-tab:: javascript

         // cloudformation.HealthCheckResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.HealthCheckResourceProps } from '@aws-cdk/aws-route53';





   .. py:attribute:: healthCheckConfig

      ``AWS::Route53::HealthCheck.HealthCheckConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-healthcheck.html#cfn-route53-healthcheck-healthcheckconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HealthCheckResource.HealthCheckConfigProperty`


   .. py:attribute:: healthCheckTags

      ``AWS::Route53::HealthCheck.HealthCheckTags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-healthcheck.html#cfn-route53-healthcheck-healthchecktags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HealthCheckResource.HealthCheckTagProperty` or undefined


HostedZoneResource
~~~~~~~~~~~~~~~~~~

.. py:class:: HostedZoneResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.HostedZoneResource;

      .. code-tab:: javascript

         const { cloudformation.HostedZoneResource } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { cloudformation.HostedZoneResource } from '@aws-cdk/aws-route53';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``HostedZoneResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``HostedZoneResource``
   :type properties: :py:class:`~@aws-cdk/aws-route53.cloudformation.HostedZoneResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: hostedZoneNameServers

      :type: :py:class:`~@aws-cdk/aws-route53.HostedZoneNameServers` *(readonly)*

   .. py:class:: HostedZoneConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HostedZoneResource.HostedZoneConfigProperty;

         .. code-tab:: javascript

            // cloudformation.HostedZoneResource.HostedZoneConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HostedZoneResource.HostedZoneConfigProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: comment

         ``HostedZoneResource.HostedZoneConfigProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-hostedzone-hostedzoneconfig.html#cfn-route53-hostedzone-hostedzoneconfig-comment


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: HostedZoneTagProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HostedZoneResource.HostedZoneTagProperty;

         .. code-tab:: javascript

            // cloudformation.HostedZoneResource.HostedZoneTagProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HostedZoneResource.HostedZoneTagProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: key

         ``HostedZoneResource.HostedZoneTagProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-hostedzone-hostedzonetags.html#cfn-route53-hostedzonetags-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``HostedZoneResource.HostedZoneTagProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-hostedzone-hostedzonetags.html#cfn-route53-hostedzonetags-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: QueryLoggingConfigProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HostedZoneResource.QueryLoggingConfigProperty;

         .. code-tab:: javascript

            // cloudformation.HostedZoneResource.QueryLoggingConfigProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HostedZoneResource.QueryLoggingConfigProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: cloudWatchLogsLogGroupArn

         ``HostedZoneResource.QueryLoggingConfigProperty.CloudWatchLogsLogGroupArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-hostedzone-queryloggingconfig.html#cfn-route53-hostedzone-queryloggingconfig-cloudwatchlogsloggrouparn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: VPCProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.HostedZoneResource.VPCProperty;

         .. code-tab:: javascript

            // cloudformation.HostedZoneResource.VPCProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.HostedZoneResource.VPCProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: vpcId

         ``HostedZoneResource.VPCProperty.VPCId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone-hostedzonevpcs.html#cfn-route53-hostedzone-hostedzonevpcs-vpcid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: vpcRegion

         ``HostedZoneResource.VPCProperty.VPCRegion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone-hostedzonevpcs.html#cfn-route53-hostedzone-hostedzonevpcs-vpcregion


         :type: string or :py:class:`@aws-cdk/cdk.Token`



HostedZoneResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: HostedZoneResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.HostedZoneResourceProps;

      .. code-tab:: javascript

         // cloudformation.HostedZoneResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.HostedZoneResourceProps } from '@aws-cdk/aws-route53';





   .. py:attribute:: hostedZoneName

      ``AWS::Route53::HostedZone.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone.html#cfn-route53-hostedzone-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: hostedZoneConfig

      ``AWS::Route53::HostedZone.HostedZoneConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone.html#cfn-route53-hostedzone-hostedzoneconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HostedZoneResource.HostedZoneConfigProperty` or undefined


   .. py:attribute:: hostedZoneTags

      ``AWS::Route53::HostedZone.HostedZoneTags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone.html#cfn-route53-hostedzone-hostedzonetags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HostedZoneResource.HostedZoneTagProperty` or undefined


   .. py:attribute:: queryLoggingConfig

      ``AWS::Route53::HostedZone.QueryLoggingConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone.html#cfn-route53-hostedzone-queryloggingconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HostedZoneResource.QueryLoggingConfigProperty` or undefined


   .. py:attribute:: vpcs

      ``AWS::Route53::HostedZone.VPCs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-hostedzone.html#cfn-route53-hostedzone-vpcs


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.HostedZoneResource.VPCProperty` or undefined


RecordSetGroupResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RecordSetGroupResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.RecordSetGroupResource;

      .. code-tab:: javascript

         const { cloudformation.RecordSetGroupResource } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { cloudformation.RecordSetGroupResource } from '@aws-cdk/aws-route53';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RecordSetGroupResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RecordSetGroupResource``
   :type properties: :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetGroupResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AliasTargetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.RecordSetGroupResource.AliasTargetProperty;

         .. code-tab:: javascript

            // cloudformation.RecordSetGroupResource.AliasTargetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RecordSetGroupResource.AliasTargetProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: dnsName

         ``RecordSetGroupResource.AliasTargetProperty.DNSName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-dnshostname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: evaluateTargetHealth

         ``RecordSetGroupResource.AliasTargetProperty.EvaluateTargetHealth``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-evaluatetargethealth


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hostedZoneId

         ``RecordSetGroupResource.AliasTargetProperty.HostedZoneId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-hostedzoneid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: GeoLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.RecordSetGroupResource.GeoLocationProperty;

         .. code-tab:: javascript

            // cloudformation.RecordSetGroupResource.GeoLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RecordSetGroupResource.GeoLocationProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: continentCode

         ``RecordSetGroupResource.GeoLocationProperty.ContinentCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset-geolocation.html#cfn-route53-recordsetgroup-geolocation-continentcode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: countryCode

         ``RecordSetGroupResource.GeoLocationProperty.CountryCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset-geolocation.html#cfn-route53-recordset-geolocation-countrycode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: subdivisionCode

         ``RecordSetGroupResource.GeoLocationProperty.SubdivisionCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset-geolocation.html#cfn-route53-recordset-geolocation-subdivisioncode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: RecordSetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.RecordSetGroupResource.RecordSetProperty;

         .. code-tab:: javascript

            // cloudformation.RecordSetGroupResource.RecordSetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RecordSetGroupResource.RecordSetProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: aliasTarget

         ``RecordSetGroupResource.RecordSetProperty.AliasTarget``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-aliastarget


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetGroupResource.AliasTargetProperty` or undefined


      .. py:attribute:: comment

         ``RecordSetGroupResource.RecordSetProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-comment


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: failover

         ``RecordSetGroupResource.RecordSetProperty.Failover``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-failover


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: geoLocation

         ``RecordSetGroupResource.RecordSetProperty.GeoLocation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-geolocation


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetGroupResource.GeoLocationProperty` or undefined


      .. py:attribute:: healthCheckId

         ``RecordSetGroupResource.RecordSetProperty.HealthCheckId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-healthcheckid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hostedZoneId

         ``RecordSetGroupResource.RecordSetProperty.HostedZoneId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-hostedzoneid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hostedZoneName

         ``RecordSetGroupResource.RecordSetProperty.HostedZoneName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-hostedzonename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``RecordSetGroupResource.RecordSetProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: region

         ``RecordSetGroupResource.RecordSetProperty.Region``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-region


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: resourceRecords

         ``RecordSetGroupResource.RecordSetProperty.ResourceRecords``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-resourcerecords


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: setIdentifier

         ``RecordSetGroupResource.RecordSetProperty.SetIdentifier``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-setidentifier


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ttl

         ``RecordSetGroupResource.RecordSetProperty.TTL``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-ttl


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``RecordSetGroupResource.RecordSetProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: weight

         ``RecordSetGroupResource.RecordSetProperty.Weight``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-weight


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined



RecordSetGroupResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RecordSetGroupResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.RecordSetGroupResourceProps;

      .. code-tab:: javascript

         // cloudformation.RecordSetGroupResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.RecordSetGroupResourceProps } from '@aws-cdk/aws-route53';





   .. py:attribute:: comment

      ``AWS::Route53::RecordSetGroup.Comment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-recordsetgroup.html#cfn-route53-recordsetgroup-comment


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hostedZoneId

      ``AWS::Route53::RecordSetGroup.HostedZoneId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-recordsetgroup.html#cfn-route53-recordsetgroup-hostedzoneid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hostedZoneName

      ``AWS::Route53::RecordSetGroup.HostedZoneName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-recordsetgroup.html#cfn-route53-recordsetgroup-hostedzonename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: recordSets

      ``AWS::Route53::RecordSetGroup.RecordSets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-route53-recordsetgroup.html#cfn-route53-recordsetgroup-recordsets


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetGroupResource.RecordSetProperty` or undefined


RecordSetResource
~~~~~~~~~~~~~~~~~

.. py:class:: RecordSetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.RecordSetResource;

      .. code-tab:: javascript

         const { cloudformation.RecordSetResource } = require('@aws-cdk/aws-route53');

      .. code-tab:: typescript

         import { cloudformation.RecordSetResource } from '@aws-cdk/aws-route53';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``RecordSetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``RecordSetResource``
   :type properties: :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: AliasTargetProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.RecordSetResource.AliasTargetProperty;

         .. code-tab:: javascript

            // cloudformation.RecordSetResource.AliasTargetProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RecordSetResource.AliasTargetProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: dnsName

         ``RecordSetResource.AliasTargetProperty.DNSName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-dnshostname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: evaluateTargetHealth

         ``RecordSetResource.AliasTargetProperty.EvaluateTargetHealth``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-evaluatetargethealth


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hostedZoneId

         ``RecordSetResource.AliasTargetProperty.HostedZoneId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-aliastarget.html#cfn-route53-aliastarget-hostedzoneid


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: GeoLocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.route53.cloudformation.RecordSetResource.GeoLocationProperty;

         .. code-tab:: javascript

            // cloudformation.RecordSetResource.GeoLocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.RecordSetResource.GeoLocationProperty } from '@aws-cdk/aws-route53';





      .. py:attribute:: continentCode

         ``RecordSetResource.GeoLocationProperty.ContinentCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset-geolocation.html#cfn-route53-recordset-geolocation-continentcode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: countryCode

         ``RecordSetResource.GeoLocationProperty.CountryCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset-geolocation.html#cfn-route53-recordset-geolocation-countrycode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: subdivisionCode

         ``RecordSetResource.GeoLocationProperty.SubdivisionCode``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset-geolocation.html#cfn-route53-recordset-geolocation-subdivisioncode


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



RecordSetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: RecordSetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.route53.cloudformation.RecordSetResourceProps;

      .. code-tab:: javascript

         // cloudformation.RecordSetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.RecordSetResourceProps } from '@aws-cdk/aws-route53';





   .. py:attribute:: recordSetName

      ``AWS::Route53::RecordSet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: type

      ``AWS::Route53::RecordSet.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: aliasTarget

      ``AWS::Route53::RecordSet.AliasTarget``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-aliastarget


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetResource.AliasTargetProperty` or undefined


   .. py:attribute:: comment

      ``AWS::Route53::RecordSet.Comment``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-comment


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: failover

      ``AWS::Route53::RecordSet.Failover``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-failover


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: geoLocation

      ``AWS::Route53::RecordSet.GeoLocation``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-geolocation


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-route53.cloudformation.RecordSetResource.GeoLocationProperty` or undefined


   .. py:attribute:: healthCheckId

      ``AWS::Route53::RecordSet.HealthCheckId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-healthcheckid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hostedZoneId

      ``AWS::Route53::RecordSet.HostedZoneId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-hostedzoneid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: hostedZoneName

      ``AWS::Route53::RecordSet.HostedZoneName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-hostedzonename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: region

      ``AWS::Route53::RecordSet.Region``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-region


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: resourceRecords

      ``AWS::Route53::RecordSet.ResourceRecords``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-resourcerecords


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: setIdentifier

      ``AWS::Route53::RecordSet.SetIdentifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-setidentifier


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ttl

      ``AWS::Route53::RecordSet.TTL``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-ttl


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: weight

      ``AWS::Route53::RecordSet.Weight``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-route53-recordset.html#cfn-route53-recordset-weight


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-route53

